--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
 <div class="aboutbody">
 	<h2>About Me:</h2>
-	<p>I am a gradating senior with Bachelors of Arts in Economics. I live in Amherst MA with a couple of my friends. I'm twenty-one soon to be twenty-two and most of this is just filler.</p>
+	<p>I am a gradating senior with Bachelors of Arts in Economics from the University of Massachusetts. I live in Amherst MA with a couple of my friends. I'm twenty-one soon to be twenty-two. I've only never been west of Clevland or more east that Italy. I would eventually like to become a web developer and live in a variety of places. </p>
 	<h2>Experience:</h2>
 	<p>I've had little previous experience with any programming. I took a computer science class which was an intro to Java. Other than several tutorials on codeacademy.com and all of the Dash tutorials.</p>
 	<h2> Contact Information</h2>
