--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
 <div class="aboutbody">
 	<h2>About Me:</h2>
-	<p>I am a gradating senior with Bachelors of Arts in Economics from the University of Massachusetts. I live in Amherst MA with a couple of my friends. I'm twenty-one soon to be twenty-two. I've only never been west of Clevland or more east that Italy. I would eventually like to become a web developer and live in a variety of places. </p>
+	<p>I am a gradating senior with Bachelors of Arts in Economics from the University of Massachusetts. I live in Amherst MA with a couple of my friends. I'm twenty-one soon to be twenty-two. I've only never been west of Clevland or more east that Italy. I would eventually like to become a web developer and travel.  </p>
 
 	<h2>Experience:</h2>
 	<p>I've had little previous experience with any programming. In highschool I took a computer class that progressed from Visual Basic to an Intro to Java. Other experience I've had consists of completeing several tutorials on codeacademy.com and all of the Dash tutorials.</p>
